<?xml version="1.0"?>
<package format="3">
  <name>ros2_project</name>
  <version>0.0.1</version>
  <description>ROS 2 project for autonomous system algorithms.</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <author email="author_email@example.com">Author Name</author>

  <license>MIT</license>
  
  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
