<?xml version="1.0"?>
<package format="2">
  <name>ros2_project</name>
  <version>0.0.1</version>
  <description>ROS 2 project for autonomous system algorithms.</description>
  <maintainer email="jrb00013wvu@gmail.com">Joseph Black</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>tensorflow</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <!-- ROS 2 Python dependencies -->
  <exec_depend>ament_lint_common</exec_depend>

  <test_depend>pytest</test_depend>
</package>
